target/generated-sources/antlr4/com/soql/parser/SOQLParser.java
// Generated from com/soql/parser/SOQL.g4 by ANTLR 4.2
package com.soql.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SOQLParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SELECT=1, IN=2, COMMA=3, DOT=4, AND=5, OR=6, NOT=7, FROM=8, WHERE=9, ORDER=10, 
		BY=11, HAVING=12, GROUP=13, ASC=14, DESC=15, LIMIT=16, ID=17, ALIAS=18, 
		STRING=19, LPAR=20, RPAR=21, BOOLEAN=22, NUMERIC=23, INTEGER=24, OPERATOR=25, 
		WS=26;
	public static final String[] tokenNames = {
		"<INVALID>", "SELECT", "IN", "','", "'.'", "AND", "OR", "NOT", "FROM", 
		"WHERE", "ORDER", "BY", "HAVING", "GROUP", "ASC", "DESC", "LIMIT", "ID", 
		"ALIAS", "STRING", "'('", "')'", "BOOLEAN", "NUMERIC", "INTEGER", "OPERATOR", 
		"WS"
	};
	public static final int
		RULE_query = 0, RULE_terms = 1, RULE_fields = 2, RULE_ordering = 3, RULE_orderingTerm = 4, 
		RULE_term = 5, RULE_fieldTerm = 6, RULE_funcRef = 7, RULE_field = 8, RULE_subquery = 9, 
		RULE_obj = 10, RULE_conditions = 11, RULE_boolExp = 12, RULE_condition = 13, 
		RULE_simpleCondition = 14, RULE_value = 15, RULE_literal = 16, RULE_nRows = 17;
	public static final String[] ruleNames = {
		"query", "terms", "fields", "ordering", "orderingTerm", "term", "fieldTerm", 
		"funcRef", "field", "subquery", "obj", "conditions", "boolExp", "condition", 
		"simpleCondition", "value", "literal", "nRows"
	};

	@Override
	public String getGrammarFileName() { return "SOQL.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SOQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class QueryContext extends ParserRuleContext {
		public TerminalNode LIMIT() { return getToken(SOQLParser.LIMIT, 0); }
		public TerminalNode BY(int i) {
			return getToken(SOQLParser.BY, i);
		}
		public TermsContext terms() {
			return getRuleContext(TermsContext.class,0);
		}
		public NRowsContext nRows() {
			return getRuleContext(NRowsContext.class,0);
		}
		public TerminalNode SELECT() { return getToken(SOQLParser.SELECT, 0); }
		public TerminalNode WHERE() { return getToken(SOQLParser.WHERE, 0); }
		public FieldsContext fields() {
			return getRuleContext(FieldsContext.class,0);
		}
		public List<ConditionsContext> conditions() {
			return getRuleContexts(ConditionsContext.class);
		}
		public ConditionsContext conditions(int i) {
			return getRuleContext(ConditionsContext.class,i);
		}
		public TerminalNode ORDER() { return getToken(SOQLParser.ORDER, 0); }
		public TerminalNode HAVING() { return getToken(SOQLParser.HAVING, 0); }
		public List<TerminalNode> BY() { return getTokens(SOQLParser.BY); }
		public OrderingContext ordering() {
			return getRuleContext(OrderingContext.class,0);
		}
		public TerminalNode FROM() { return getToken(SOQLParser.FROM, 0); }
		public ObjContext obj() {
			return getRuleContext(ObjContext.class,0);
		}
		public TerminalNode GROUP() { return getToken(SOQLParser.GROUP, 0); }
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).exitQuery(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_query);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36); match(SELECT);
			setState(37); terms();
			setState(38); match(FROM);
			setState(39); obj();
			setState(42);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(40); match(WHERE);
				setState(41); conditions();
				}
			}

			setState(47);
			_la = _input.LA(1);
			if (_la==GROUP) {
				{
				setState(44); match(GROUP);
				setState(45); match(BY);
				setState(46); fields();
				}
			}

			setState(51);
			_la = _input.LA(1);
			if (_la==HAVING) {
				{
				setState(49); match(HAVING);
				setState(50); conditions();
				}
			}

			setState(56);
			_la = _input.LA(1);
			if (_la==ORDER) {
				{
				setState(53); match(ORDER);
				setState(54); match(BY);
				setState(55); ordering();
				}
			}

			setState(60);
			_la = _input.LA(1);
			if (_la==LIMIT) {
				{
				setState(58); match(LIMIT);
				setState(59); nRows();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermsContext extends ParserRuleContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public List<TerminalNode> COMMA() { return getTokens(SOQLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SOQLParser.COMMA, i);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public TermsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terms; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).enterTerms(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).exitTerms(this);
		}
	}

	public final TermsContext terms() throws RecognitionException {
		TermsContext _localctx = new TermsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_terms);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62); term();
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(63); match(COMMA);
				setState(64); term();
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldsContext extends ParserRuleContext {
		public FieldContext field(int i) {
			return getRuleContext(FieldContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SOQLParser.COMMA); }
		public List<FieldContext> field() {
			return getRuleContexts(FieldContext.class);
		}
		public TerminalNode COMMA(int i) {
			return getToken(SOQLParser.COMMA, i);
		}
		public FieldsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fields; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).enterFields(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).exitFields(this);
		}
	}

	public final FieldsContext fields() throws RecognitionException {
		FieldsContext _localctx = new FieldsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_fields);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70); field();
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(71); match(COMMA);
				setState(72); field();
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OrderingContext extends ParserRuleContext {
		public OrderingTermContext orderingTerm(int i) {
			return getRuleContext(OrderingTermContext.class,i);
		}
		public TerminalNode COMMA() { return getToken(SOQLParser.COMMA, 0); }
		public List<OrderingTermContext> orderingTerm() {
			return getRuleContexts(OrderingTermContext.class);
		}
		public OrderingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ordering; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).enterOrdering(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).exitOrdering(this);
		}
	}

	public final OrderingContext ordering() throws RecognitionException {
		OrderingContext _localctx = new OrderingContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ordering);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78); orderingTerm();
			{
			setState(79); match(COMMA);
			setState(80); orderingTerm();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OrderingTermContext extends ParserRuleContext {
		public TerminalNode DESC() { return getToken(SOQLParser.DESC, 0); }
		public TerminalNode ASC() { return getToken(SOQLParser.ASC, 0); }
		public FieldContext field() {
			return getRuleContext(FieldContext.class,0);
		}
		public OrderingTermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_orderingTerm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).enterOrderingTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).exitOrderingTerm(this);
		}
	}

	public final OrderingTermContext orderingTerm() throws RecognitionException {
		OrderingTermContext _localctx = new OrderingTermContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_orderingTerm);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82); field();
			setState(83);
			_la = _input.LA(1);
			if ( !(_la==ASC || _la==DESC) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public SubqueryContext subquery() {
			return getRuleContext(SubqueryContext.class,0);
		}
		public FieldTermContext fieldTerm() {
			return getRuleContext(FieldTermContext.class,0);
		}
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).exitTerm(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_term);
		try {
			setState(87);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(85); fieldTerm();
				}
				break;
			case LPAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(86); subquery();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldTermContext extends ParserRuleContext {
		public FieldContext field() {
			return getRuleContext(FieldContext.class,0);
		}
		public FuncRefContext funcRef() {
			return getRuleContext(FuncRefContext.class,0);
		}
		public FieldTermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldTerm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).enterFieldTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).exitFieldTerm(this);
		}
	}

	public final FieldTermContext fieldTerm() throws RecognitionException {
		FieldTermContext _localctx = new FieldTermContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_fieldTerm);
		int _la;
		try {
			setState(94);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(89); field();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(90); funcRef();
				setState(92);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(91); field();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncRefContext extends ParserRuleContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(SOQLParser.RPAR, 0); }
		public TerminalNode LPAR() { return getToken(SOQLParser.LPAR, 0); }
		public TerminalNode ID() { return getToken(SOQLParser.ID, 0); }
		public FuncRefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcRef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).enterFuncRef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).exitFuncRef(this);
		}
	}

	public final FuncRefContext funcRef() throws RecognitionException {
		FuncRefContext _localctx = new FuncRefContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_funcRef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96); match(ID);
			setState(97); match(LPAR);
			setState(98); term();
			setState(99); match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldContext extends ParserRuleContext {
		public List<TerminalNode> DOT() { return getTokens(SOQLParser.DOT); }
		public List<TerminalNode> ID() { return getTokens(SOQLParser.ID); }
		public TerminalNode DOT(int i) {
			return getToken(SOQLParser.DOT, i);
		}
		public TerminalNode ID(int i) {
			return getToken(SOQLParser.ID, i);
		}
		public FieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).enterField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).exitField(this);
		}
	}

	public final FieldContext field() throws RecognitionException {
		FieldContext _localctx = new FieldContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_field);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101); match(ID);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(102); match(DOT);
				setState(103); match(ID);
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubqueryContext extends ParserRuleContext {
		public TerminalNode RPAR() { return getToken(SOQLParser.RPAR, 0); }
		public TerminalNode LPAR() { return getToken(SOQLParser.LPAR, 0); }
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public SubqueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subquery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).enterSubquery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).exitSubquery(this);
		}
	}

	public final SubqueryContext subquery() throws RecognitionException {
		SubqueryContext _localctx = new SubqueryContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_subquery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109); match(LPAR);
			setState(110); query();
			setState(111); match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SOQLParser.ID, 0); }
		public ObjContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_obj; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).enterObj(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).exitObj(this);
		}
	}

	public final ObjContext obj() throws RecognitionException {
		ObjContext _localctx = new ObjContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_obj);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionsContext extends ParserRuleContext {
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public BoolExpContext boolExp(int i) {
			return getRuleContext(BoolExpContext.class,i);
		}
		public List<BoolExpContext> boolExp() {
			return getRuleContexts(BoolExpContext.class);
		}
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public ConditionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).enterConditions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).exitConditions(this);
		}
	}

	public final ConditionsContext conditions() throws RecognitionException {
		ConditionsContext _localctx = new ConditionsContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_conditions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115); condition();
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND || _la==OR) {
				{
				{
				setState(116); boolExp();
				setState(117); condition();
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BoolExpContext extends ParserRuleContext {
		public TerminalNode AND() { return getToken(SOQLParser.AND, 0); }
		public TerminalNode OR() { return getToken(SOQLParser.OR, 0); }
		public TerminalNode NOT() { return getToken(SOQLParser.NOT, 0); }
		public BoolExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolExp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).enterBoolExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).exitBoolExp(this);
		}
	}

	public final BoolExpContext boolExp() throws RecognitionException {
		BoolExpContext _localctx = new BoolExpContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_boolExp);
		int _la;
		try {
			setState(129);
			switch (_input.LA(1)) {
			case OR:
				enterOuterAlt(_localctx, 1);
				{
				setState(124); match(OR);
				}
				break;
			case AND:
				enterOuterAlt(_localctx, 2);
				{
				setState(125); match(AND);
				setState(127);
				_la = _input.LA(1);
				if (_la==NOT) {
					{
					setState(126); match(NOT);
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public SimpleConditionContext simpleCondition() {
			return getRuleContext(SimpleConditionContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(SOQLParser.RPAR, 0); }
		public TerminalNode LPAR() { return getToken(SOQLParser.LPAR, 0); }
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).enterCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).exitCondition(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_condition);
		try {
			setState(136);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(131); simpleCondition();
				}
				break;
			case LPAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(132); match(LPAR);
				setState(133); simpleCondition();
				setState(134); match(RPAR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleConditionContext extends ParserRuleContext {
		public TerminalNode IN() { return getToken(SOQLParser.IN, 0); }
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public TerminalNode RPAR() { return getToken(SOQLParser.RPAR, 0); }
		public TerminalNode LPAR() { return getToken(SOQLParser.LPAR, 0); }
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public List<TerminalNode> COMMA() { return getTokens(SOQLParser.COMMA); }
		public FieldContext field() {
			return getRuleContext(FieldContext.class,0);
		}
		public TerminalNode COMMA(int i) {
			return getToken(SOQLParser.COMMA, i);
		}
		public TerminalNode OPERATOR() { return getToken(SOQLParser.OPERATOR, 0); }
		public SimpleConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleCondition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).enterSimpleCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).exitSimpleCondition(this);
		}
	}

	public final SimpleConditionContext simpleCondition() throws RecognitionException {
		SimpleConditionContext _localctx = new SimpleConditionContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_simpleCondition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138); field();
			setState(153);
			switch (_input.LA(1)) {
			case OPERATOR:
				{
				setState(139); match(OPERATOR);
				setState(140); value();
				}
				break;
			case IN:
				{
				setState(141); match(IN);
				setState(142); match(LPAR);
				setState(143); value();
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(144); match(COMMA);
					setState(145); value();
					}
					}
					setState(150);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(151); match(RPAR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public FieldContext field() {
			return getRuleContext(FieldContext.class,0);
		}
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).exitValue(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_value);
		try {
			setState(157);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(155); field();
				}
				break;
			case STRING:
			case BOOLEAN:
			case NUMERIC:
				enterOuterAlt(_localctx, 2);
				{
				setState(156); literal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiteralContext extends ParserRuleContext {
		public TerminalNode NUMERIC() { return getToken(SOQLParser.NUMERIC, 0); }
		public TerminalNode BOOLEAN() { return getToken(SOQLParser.BOOLEAN, 0); }
		public TerminalNode STRING() { return getToken(SOQLParser.STRING, 0); }
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).enterLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).exitLiteral(this);
		}
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_literal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING) | (1L << BOOLEAN) | (1L << NUMERIC))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NRowsContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(SOQLParser.INTEGER, 0); }
		public NRowsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nRows; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).enterNRows(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SOQLListener ) ((SOQLListener)listener).exitNRows(this);
		}
	}
